--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>个人文档</title>
-  <link rel="icon" href="http://www.yy.com/favicon.ico">
+  <title>JR93的笔记</title>
+  <link rel="icon" href="favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -21,7 +21,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '个人文档',
+      name: '个人笔记',
       loadSidebar: true,
       maxLevel: 4,
       subMaxLevel: 3,
