--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title>JR93的笔记</title>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="_media/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
   <style>
+    .cover-main img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+    }
+    .cover-main h1 a {
+      pointer-events: none;
+    }
+    .app-name-link img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+    }
     nav.app-nav li ul {
       min-width: 100px;
     }
@@ -21,37 +35,59 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
+      repo: 'https://github.com/JR93/jr93.github.io',
+      homepage: 'index.md',
       name: '个人笔记',
+      coverpage: true,
+      onlyCover: true,
       loadSidebar: true,
+      autoHeader: true,
+      loadNavbar: true,
+      mergeNavbar: true,
+      notFoundPage: true,
+      auto2top: true,
       maxLevel: 4,
       subMaxLevel: 3,
+      logo: '_media/logo.jpg',
       alias: {
-        '/.*/_sidebar.md': '/_sidebar.md'
+        '/.*/_sidebar.md': '/_sidebar.md',
+        '/.*/_navbar.md': '/_navbar.md'
       },
       search: {
         noData: {
-          '/': '没有找到哦~'
+          '/': '没有相关笔记~'
         },
         paths: 'auto',
         placeholder: {
           '/': '点击搜索...'
         }
       },
-      loadNavbar: true,
-      auto2top: true,
       pagination: {
-        previousText: '上一章节',
-        nextText: '下一章节'
+        previousText: '上一篇',
+        nextText: '下一篇'
       }
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
-  <script src="//unpkg.com/docsify/lib/plugins/gitalk.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/emoji.js"></script>
   <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-bash.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/zoom-image.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-markdown.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-bash.js"></script>
   <script src="https://unpkg.com/docsify-copy-code@2"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/gitalk.min.js"></script>
+  <script src="//unpkg.com/gitalk/dist/gitalk.min.js"></script>
+  <script>
+    const gitalk = new Gitalk({
+      clientID: '524312895603f4fd39c9',
+      clientSecret: 'dfc0e867e201d518595efd36d99c5f5bc8e07ce1',
+      repo: 'jr93.github.io',
+      owner: 'JR93',
+      admin: ['JR93'],
+      id: 'Gitalk',
+      distractionFreeMode: true
+    })
+  </script>
 </body>
 </html>
