--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       repo: 'jr93.github.io',
       owner: 'JR93',
       admin: ['JR93'],
-      id: 'Gitalk',
+      id: 'Notes',
       distractionFreeMode: true
     })
   </script>
