chore: remove logo point-events

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       height: 50px;
       border-radius: 50%;
     }
-    .cover-main h1 a,
-    .app-name-link {
+    .cover-main h1 a {
       pointer-events: none;
     }
     .app-sub-sidebar > li:last-child:before {
