--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JR93的笔记</title>
+  <title>郭锦荣的个人笔记</title>
   <link rel="icon" href="_media/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
@@ -10,10 +10,20 @@
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
   <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
   <style>
+    section.cover.has-mask .mask {
+      background-color: #000;
+      opacity: 0.5;
+    }
+    .anchor span {
+      color: #fff;
+      letter-spacing: 8px;
+      font-weight: 700;
+    }
     .cover-main img {
       width: 100px;
       height: 100px;
       border-radius: 50%;
+      filter: drop-shadow(0 0 5px #42b983) saturate(120%);
     }
     .app-name-link img {
       width: 50px;
@@ -48,22 +58,18 @@
     window.$docsify = {
       repo: 'https://github.com/JR93/jr93.github.io',
       homepage: 'index.md',
-      name: '个人笔记',
-      coverpage: true,
+      name: '郭锦荣的个人笔记',
+      coverpage: '_config/coverpage.md',
       onlyCover: true,
-      loadSidebar: true,
+      loadSidebar: '_config/sidebar.md',
       autoHeader: true,
-      loadNavbar: true,
+      loadNavbar: '_config/navbar.md',
       mergeNavbar: true,
-      notFoundPage: true,
+      notFoundPage: '_config/404.md',
       auto2top: true,
       maxLevel: 4,
       subMaxLevel: 3,
       logo: '_media/logo.jpg',
-      alias: {
-        '/.*/_sidebar.md': '/_sidebar.md',
-        '/.*/_navbar.md': '/_navbar.md'
-      },
       search: {
         noData: {
           '/': '没有相关笔记~'
