--- a/index.html
+++ b/index.html
@@ -10,20 +10,36 @@
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
   <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
   <style>
+    .github-corner svg {
+      color: #fff;
+      fill: rgba(0, 0, 0, 0.3);
+    }
     section.cover.has-mask .mask {
       background-color: #000;
       opacity: 0.5;
     }
     .anchor span {
       color: #fff;
-      letter-spacing: 8px;
+      letter-spacing: 2px;
       font-weight: 700;
+    }
+    section.cover blockquote p {
+      color: #fff;
+      padding-bottom: 10px;
+      letter-spacing: 2px;
+    }
+    section.cover .cover-main>p:last-child a:last-child {
+      color: #fff;
+      border-color: #fff;
+      background: none;
+    }
+    section.cover .cover-main>p:last-child a:hover {
+      background-color: rgba(255, 255, 255, 0.5);
     }
     .cover-main img {
       width: 100px;
       height: 100px;
       border-radius: 50%;
-      filter: drop-shadow(0 0 5px #42b983) saturate(120%);
     }
     .app-name-link img {
       width: 50px;
@@ -55,11 +71,13 @@
 <body>
   <div id="app"></div>
   <script>
+    var luckyNumber = Math.floor(Math.random() * 10);
+    var coverpage = '_config/home/coverpage' + luckyNumber + '.md'
     window.$docsify = {
       repo: 'https://github.com/JR93/jr93.github.io',
       homepage: 'index.md',
       name: '郭锦荣的个人笔记',
-      coverpage: '_config/coverpage.md',
+      coverpage: coverpage,
       onlyCover: true,
       loadSidebar: '_config/sidebar.md',
       autoHeader: true,
@@ -112,7 +130,7 @@
           })
         }
       ]
-    }
+    };
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
