fix: 修改进入笔记按钮样式

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       background-color: #000;
       opacity: 0.5;
     }
-    .anchor span {
+    .cover-main .anchor span {
       color: #fff;
       letter-spacing: 2px;
       font-weight: 700;
@@ -34,8 +34,11 @@
       border-color: #fff;
       background: none;
     }
+    section.cover .cover-main>p:last-child a:last-child:hover {
+      color: #fff;
+    }
     section.cover .cover-main>p:last-child a:hover {
-      background-color: rgba(255, 255, 255, 0.5);
+      background-color: rgba(0, 0, 0, 0.6);
     }
     .cover-main img {
       width: 100px;
